reference correct bg image

--- a/css/blocks.css
+++ b/css/blocks.css
@@ -578,7 +578,7 @@ Version: 1.0
 
 
 #header-3 .hero {
-	background: url('../images/bgSkyWay.jpg') no-repeat center center;
+	background: url('../images/bgSkyway.jpg') no-repeat center center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
