init google translate link in footer

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -58,6 +58,9 @@
     <div class="container footer-1-2">
       <img class="img-responsive center-block" src="{{ '/assets/images/brand/recycleLogo.png' | prepend: site.baseurl }}">
       <p class="text-center">&copy; Tampa Bay Recycles, 2017</p>
+      <p class="text-center">
+        <a href="{{ '/es' | prepend: site.baseurl }}" class="text-danger">Español</a>
+      </p>
     </div>
   </footer>
 
