--- a/_includes/gov-logos.html
+++ b/_includes/gov-logos.html
@@ -10,7 +10,7 @@
     </a>
   </div>
   <div class="col-md-3">
-    <a href="http://www.pinellascounty.org/solidwaste/recycle.htm" target="_blank">
+    <a href="http://www.pinellascounty.org/recycle" target="_blank">
       <img alt="Pinellas County" src="{{ '/assets/images/partner-logos/SW_3pmsc.png' | prepend: site.baseurl }}">
     </a>
   </div>
